--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,7 @@ floating_modifier $mod
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:MesloLGS NF 9
+font pango:Segoe UI 10
 
 # autostart
 exec --no-startup-id ~/.config/screenlayout/config.sh
@@ -28,6 +28,7 @@ exec --no-startup-id feh --bg-fill ~/wallpaper.jpg
 # exec --no-startup-id xsettingsd &
 exec --no-startup-id compton --config ~/.config/compton/compton.conf -b
 exec --no-startup-id mpd
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -41,9 +42,9 @@ exec --no-startup-id mpd
 # exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 # screen brightness
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
@@ -53,8 +54,8 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightne
 bindsym $mod+Return exec gnome-terminal
 
 # start dmenu and rofi
-bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size=8'"
-bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Noto Sans 8'
+# bindsym $mod+Shift+d exec i3-dmenu-desktop --dmenu="dmenu -i -fn 'Noto Sans:size=8'"
+bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3 -font 'Segoe UI 10'
 
 # kill focused window
 bindsym $mod+w kill
@@ -174,7 +175,7 @@ mode "$mode_system" {
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
 
     # back to normal: C, Enter or Escape
-    bindsym Shift+c mode "default"
+    bindsym c mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
@@ -210,19 +211,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        colors {
-          background #2f343f
-          statusline #2f343f
-          separator #4b5262
-          # border, background, text
-          focused_workspace       #2f343f #bf616a #d8dee8
-          active_workspace        #2f343f #2f344f #d8dee8
-          inactive_workspace      #2f343f #2f343f #d8dee8
-          urgent_workspace        #2f343f #ebcb8b #2f343f
-        }
-        status_command i3status
-}
+# bar {
+#         colors {
+#           background #2f343f
+#           statusline #2f343f
+#           separator #4b5262
+#           # border, background, text
+#           focused_workspace       #2f343f #bf616a #d8dee8
+#           active_workspace        #2f343f #2f344f #d8dee8
+#           inactive_workspace      #2f343f #2f343f #d8dee8
+#           urgent_workspace        #2f343f #ebcb8b #2f343f
+#         }
+#         status_command i3status
+# }
 
 # window rules, you can find the window class using xprop
 for_window [class=".*"] border pixel 4
