--- a/.config/i3/config
+++ b/.config/i3/config
@@ -211,19 +211,19 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#         colors {
-#           background #2f343f
-#           statusline #2f343f
-#           separator #4b5262
-#           # border, background, text
-#           focused_workspace       #2f343f #bf616a #d8dee8
-#           active_workspace        #2f343f #2f344f #d8dee8
-#           inactive_workspace      #2f343f #2f343f #d8dee8
-#           urgent_workspace        #2f343f #ebcb8b #2f343f
-#         }
-#         status_command i3status
-# }
+bar {
+        colors {
+          background #2f343f
+          statusline #2f343f
+          separator #4b5262
+          # border, background, text
+          focused_workspace       #2f343f #bf616a #d8dee8
+          active_workspace        #2f343f #2f344f #d8dee8
+          inactive_workspace      #2f343f #2f343f #d8dee8
+          urgent_workspace        #2f343f #ebcb8b #2f343f
+        }
+        status_command i3status
+}
 
 # window rules, you can find the window class using xprop
 for_window [class=".*"] border pixel 4
